--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
         <div class="line-left"></div>
         <section>
             <div class="top">
-                <article class="artic1"></article>
-                <div class="img img1"><img src="img/1.png" alt=""></div>
+                <article class="artic1"><span>¡música en </span><span>directo!</span> </article>
+                <div class="img img1">
+                    <img src="img/1.png" alt="" class="fill">
+                </div>
             </div>
             <div class="bott">
                 <div class="img img2">
                     <img src="img/2.png" alt="">
                 </div>
-                <article class="artic2"></article>
+                <article class="artic2">
+                    <span>Con dos</span> <span>Invitados </span> <span>especiales, los </span><span>Reyes de la </span> <span>música</span>
+                    <span>Haz tu reserva en <br> www.unsitioincreible.com</span>
+                </article>
             </div>
         </section>
     </div>
